--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Cryp70, Find more about crypto currencies"
+      content="Cryp70, Read about latest cryptocurrency news, Learn more about top 100 'cryptos' in the world"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/crypt.png" />
 
